--- a/views/deck.erb
+++ b/views/deck.erb
@@ -10,7 +10,14 @@
   <a href="/decks/<%= @deck.id %>/cards/new">Add Card</a>
 </p>
 <% @deck.cards.each do |card| %>
-  <p><%= card.front %>: </p>
+  <p>Card Front: <%= card.front %></p>
+  <p>
+    <form action="/decks/<%= @deck.id %>/cards/<%= card.id %>/guess" method="POST">
+      <label for="card_back">Card Back: </label>
+      <input type="text" name="card[back]" id="card_back">
+      <input type="submit" value="Guess">
+    </form>
+  </p>
   <p>
     <a href="/decks/<%= @deck.id %>/cards/<%= card.id %>/edit">Edit Card</a>
     <form action="/decks/<%= @deck.id %>/cards/<%= card.id %>" method="POST">
